--- a/reward/templates/base.html
+++ b/reward/templates/base.html
@@ -9,7 +9,7 @@
     {% if title %}
     <title>Awards - {{title}}</title>
     {% else %}
-    <title>Insta</title>
+    <title>Awards</title>
     {% endif %}
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
