defined a view function for welcome/index.html

--- a/reward/templates/index.html
+++ b/reward/templates/index.html
@@ -1,4 +1,4 @@
 {% extends "base.html" %} {% load bootstrap4 %} {% block content %}
 
-<h3>AWARDS</h3>
+<h3 style="text-align: center; color: green;padding-top:50px;">AWARDS</h3>
 {% endblock %}
