--- a/reward/templates/navbar.html
+++ b/reward/templates/navbar.html
@@ -64,8 +64,8 @@
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <a href="{%url 'welcome'%}">Home</a>
-            <a href="#">Login</a>
-            <a href="#">Register</a>
+            <a href="/accounts/login">Login</a>
+            <a href="/accounts/register">Register</a>
             <a href="#">Profile</a>
             <a href="#">Add Sites</a>
 
