--- a/reward/templates/navbar.html
+++ b/reward/templates/navbar.html
@@ -68,6 +68,8 @@
             <a href="/accounts/register">Register</a>
             <a href="#">Profile</a>
             <a href="#">Add Sites</a>
+            <a href="{% url 'contact' %}">Contact Us</a>
+
 
         </div>
 
