cerated a search functionality for projects

--- a/reward/templates/contacts.html
+++ b/reward/templates/contacts.html
@@ -1,4 +1,13 @@
+{% extends "base.html" %} {% load bootstrap4 %} {% block content %}
+
 <div class="container-fluid" style="text-align: center; background-color:#3a6073;color: white">
 <h3>Email:sakwafrancis89@gmail.com</h3>
 <h3>Phone:0701112358</h3>
 </div>
+<style>
+h3{
+     padding-bottom: 30px;
+}
+    
+</style>
+{% endblock %}
