added models.py file

--- a/reward/templates/contacts.html
+++ b/reward/templates/contacts.html
@@ -1,13 +1,9 @@
 {% extends "base.html" %} {% load bootstrap4 %} {% block content %}
+<div class="pt-5">
+    <div class="container-fluid bg-success p-5 text-white" style="">
+    <h3>Email:sakwafrancis89@gmail.com</h3>
+    <h3>Phone:0701112358</h3>
+    </div>
 
-<div class="container-fluid" style="text-align: center; background-color:#3a6073;color: white">
-<h3>Email:sakwafrancis89@gmail.com</h3>
-<h3>Phone:0701112358</h3>
 </div>
-<style>
-h3{
-     padding-bottom: 30px;
-}
-    
-</style>
 {% endblock %}
