--- a/reward/templates/search.html
+++ b/reward/templates/search.html
@@ -1,31 +1,38 @@
-{% extends 'base.html' %}
-
-{% load static %}
+{% extends "pics/base.html" %}
 
 {% block content %}
-<style>
-  .picture-circle, .picture-circle--medium, .picture-circle--small {
-    border-radius: 100%;
-    width: 150px;
-    height: 150px; }
-    .picture-circle--medium {
-      width: 136px;
-      height: 136px; }
-      .username{
-          display: flex;
-      }
-   </style>
-{% for site in projects %}
-<div class="row profile-settings" style="left:50%;">
-  <div class="col-xs-12">
-    <div class="profile-pic-name">
-        <img class="picture-circle--medium" src="{{ site.user_profile.profile_path.url }}">
-        {{ site.profile.profile_path.url }}
-        <h2>Project:<a href="{{site.site_url}}"> {{ site.site_name }}</a> </h2>
-      <span class="username"></span>
-    </div>
-  
-  </div>
+
+<div class="container">
+        <div class="intro">
+                <h2>Search Results</h2>
+            </div>
+            <hr>
+        
+{% if searched_projects %}
+    <h5>Found {{ searched_projects|length }} projects for the searched term '{{message}}'</h5>
+{% else %}
+    <h5> Found 0 projects for the search term '{{message}}'</h5>
+{% endif %}
+
+<br>
+
+{% if searched_projects %}
+<ul class="list-group list-group-flush">
+        {% for project in searched_projects %}
+        <li class="list-group-item" style="background-color: transparent;">
+            <p class="firstletter">{{project.title}}
+            <a href="{% url 'project' project.id %}" style="float:right;">
+                    <button type="button" class="btn btn-info">View</button>       
+            </a>
+            </p>
+        
+</li>
+        {% endfor %}
+</ul>
+{% endif %}
+
+
+
 </div>
-{% endfor %}
+
 {% endblock %}
