--- a/reward/templates/search.html
+++ b/reward/templates/search.html
@@ -4,7 +4,7 @@
 
 <div class="container">
         <div class="intro">
-                <h2>Search Results</h2>
+                <h2>Searching ...</h2>
             </div>
             <hr>
         
