--- a/reward/templates/contacts.html
+++ b/reward/templates/contacts.html
@@ -1,9 +1,16 @@
-{% extends "base.html" %} {% load bootstrap4 %} {% block content %}
+{% load bootstrap4 %} {% block content %}
 <div class="pt-5">
-    <div class="container-fluid bg-success p-5 text-white" style="">
+    <div class="container-fluid bg-success p-5 text-white">
     <h3>Email:sakwafrancis89@gmail.com</h3>
     <h3>Phone:0701112358</h3>
     </div>
 
 </div>
+<style>
+.container-fliud{
+     background-color: aqua;
+     text-align: center;
+}
+
+</style>
 {% endblock %}
