--- a/reward/templates/index.html
+++ b/reward/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% load bootstrap4 %} {% block content %}
 
-<h3 style="text-align: center; color: green;padding-top:50px;">AWARDS</h3>
+<h3 style="text-align: center; color: green;padding-top:50px;">AWARDSITE</h3>
 <div class="row">
 <div class="container">
     <style>
