--- a/reward/templates/rating.html
+++ b/reward/templates/rating.html
@@ -17,6 +17,7 @@
 
   
   {% include 'navbar.html' %}
+  <div class="container-fliud">
   <div class="container">
       <div class="intro">
           <h2>New Rating</h2>
@@ -33,6 +34,14 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   {% bootstrap_javascript %} {% endblock %}
 </div>
+</div>
+<style>
+ .container{
+    background: linear-gradient(to right, #16222a, #3a6073);
+    color: whitesmoke;
+ }
+
+</style>
 </body>
 
 </html>
