--- a/reward/templates/base.html
+++ b/reward/templates/base.html
@@ -21,6 +21,13 @@
 
   </head>
   <body>
+      <style>
+        body{
+
+            background: linear-gradient(to right, #16222a, #3a6073);
+            color: whitesmoke;
+        }
+        </style>
     
     {% include 'navbar.html' %}
 
