--- a/reward/templates/newprofile.html
+++ b/reward/templates/newprofile.html
@@ -18,11 +18,20 @@
 <body>
   {% include 'navbar.html' %}
   <div class="container">
+        <style>
+                .container {
+                    background-image: url('https://images.unsplash.com/photo-1416862291207-4ca732144d83?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1047&q=80');
+                    background-size: cover;
+                }
+                h2{
+                    text-align: center;
+                }
+            </style>
       <div class="intro">
           <h2>Update Profile</h2>
         </div>
   <hr>
-  <form  action="{%url 'newprofile' %}" method="post" enctype="multipart/form-data">
+  <form  action="{%url 'newprofile' %}" method="post" enctype="multipart/form-data" style="margin-right: 30%;margin-left: 10%">
     {%csrf_token%}
 
     {% bootstrap_form form%}
