--- a/reward/templates/newproject.html
+++ b/reward/templates/newproject.html
@@ -18,6 +18,13 @@
 <body>
   {% include 'navbar.html' %}
 <div class="container">
+        <style>
+                .container {
+                    background: linear-gradient(to right, #16222a, #3a6073);
+                    background-size: cover;
+                    color: whitesmoke;
+                }
+        </style>        
 
     <div class="intro">
         <h2>New Project</h2>
