--- a/reward/templates/registration/registration_form.html
+++ b/reward/templates/registration/registration_form.html
@@ -2,7 +2,7 @@
 <div class="container">
   <style>
                 .container{
-                    background-image: url('https://images.unsplash.com/photo-1416862291207-4ca732144d83?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1047&q=80');
+                    background: linear-gradient(to right, #16222a, #3a6073);
                     background-size: cover;
                 }
         </style>
@@ -13,7 +13,6 @@
       {% if form.errors %}
       <p> Some Information Might be Incorrect </p>
       {% endif %}
-      <img class="logo" src="http://www.dallasarboretum.org/assets/img/instagram-word.png" width="90%"></img>
 
       <div class="panel panel-default" style="background: linear-gradient(to right, #141e30, #243b55); color: white;">
 
