--- a/reward/templates/photos/project.html
+++ b/reward/templates/photos/project.html
@@ -25,8 +25,8 @@
   <br>
   <br>
 
-  <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
   {% if ratings%}
+  <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
   <h5>Overall Ratings</h5>
   <div class="card text-white bg-primary mb-3">
       <div class="card-body firstletter" >
@@ -53,6 +53,7 @@
   <p></p>
   {% endfor %}
   </div>
+</div>
 
   {% else %}
   <h4> No Ratings Upto Now</h4>
