--- a/reward/templates/navbar.html
+++ b/reward/templates/navbar.html
@@ -45,7 +45,7 @@
           {% endif %}
           </ul>
           <form class="form-inline my-2 my-lg-0" action="{% url 'search_results' %}">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search project" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
           </form>
         </div>
