--- a/reward/templates/newprofile.html
+++ b/reward/templates/newprofile.html
@@ -20,8 +20,9 @@
   <div class="container">
         <style>
                 .container {
-                    background-image: url('https://images.unsplash.com/photo-1416862291207-4ca732144d83?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1047&q=80');
+                    background: linear-gradient(to right, #16222a, #3a6073);
                     background-size: cover;
+                    color: whitesmoke;
                 }
                 h2{
                     text-align: center;
