--- a/reward/templates/navbar.html
+++ b/reward/templates/navbar.html
@@ -15,10 +15,10 @@
               <li><a class="nav-link" href="{% url 'profile' profile.id %}">Profile</a></li>
               <li><a class="nav-link" href="{% url 'newproject' %}">Add Site</a></li>
               <li><a class="nav-link" href="{% url 'newprofile' %}">Add Profile</a></li>
-              <li>
+              <!-- <li>
                   <a class="nav-link" href="{% url 'contact'%}">Contacts</a>
                 </li>
-                <a class="nav-link" href="{% url 'subscribe'%}">Subscribe</a>
+                <a class="nav-link" href="{% url 'subscribe'%}">Subscribe</a> -->
             {% if user.is_authenticated %}
             <li class="dropdown">
               <a href="#" class="dropdown-toggle btn btn-outline-primary" data-toggle="dropdown" role="button" aria-expanded="false">Account
