--- a/reward/templates/contacts.html
+++ b/reward/templates/contacts.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 {% load bootstrap4 %}
-{% block content %}<div class="pt-5">
-    <div class="container-fluid bg-success p-5 text-white">
+{% block content %}
+    <div class="pt-5 text-align-center">
+    <div class="container-fluid  p-5 ">
     <h3>Email:sakwafrancis89@gmail.com</h3>
     <h3>Phone:0701112358</h3>
     </div>
