created a home page and social media buttons

--- a/reward/templates/registration/login.html
+++ b/reward/templates/registration/login.html
@@ -11,7 +11,7 @@
     <div class="col-md-4"></div>
     <div class="col-md-4">
       {% if form.errors %}
-      <p> It seeems Your password or Username is incorrect </p>
+      <p style="color:white"> It seeems Your password or Username is incorrect </p>
       {% endif %}
 
       <div class="panel panel-default" style="background: linear-gradient(to right, #141e30, #243b55); color: white">
