--- a/reward/templates/index.html
+++ b/reward/templates/index.html
@@ -1,69 +1,205 @@
 {% extends "base.html" %} {% load bootstrap4 %} {% block content %}
 
-<link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Lobster" rel="stylesheet">
+<!DOCTYPE html>
+<html lang="en">
 
-<h3 style="text-align: center; color: green;padding-top:50px;font-family: 'Abril Fatface', cursive;">AWARDSITE</h3>
-<div class="row">
-<div class="container">
-    <style>
+<head>
+    <!-- Required meta tags always come first -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>AWARDS</title>
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
+    <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display" rel="stylesheet">
+
+    <!-- Bootstrap core CSS -->
+    <link href="../../css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Material Design Bootstrap -->
+    <link href="../../css/mdb.min.css" rel="stylesheet">
+
+</head>
+
+<body>
+        <!-- /.Navbar -->
+    </header>
+    <!--/.Double navigation-->
+    
+    <!--Main layout-->
+    <main>
+        <h1 style="text-align:center;font-family: 'Major Mono Display', monospace;">AWARDSITE</h1>
+        <div class="container-fluid text-center">
+
+            <!--Card-->
+            <div class="card card-cascade wider reverse my-4 pb-5">
+
+                <!--Card image-->
+                <div class="view view-cascade overlay wow fadeIn">
+                    <img src="https://images.unsplash.com/photo-1488711500009-f9111944b1ab?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" class="img-fluid" width="100%" height="10%">
+                    <a href="#!">
+                        <div class="mask rgba-white-slight"></div>
+                    </a>
+                </div>
+                <!--/Card image-->
+
+                <!--Card content-->
+                <div class="card-body card-body-cascade text-center wow fadeIn" data-wow-delay="0.2s" style="background-color:skyblue">
+                    <!--Title-->
+                    <h4 class="card-title"><strong>Shortcuts</strong></h4>
+                    
+
+                        <a href="{% url 'contact' %}" class="btn btn-primary btn-lg">Contacts</a>
+                        <a href="{% url 'newprofile' %}" class="btn btn-primary btn-lg">New Profile</a>
+                        <a href="{% url 'newproject' %}" class="btn btn-primary btn-lg">Add Project</a>
+
+                </div>
+                <!--/.Card content-->
+
+            </div>
+            <!--/.Card-->
         
-        .container{
-            background: linear-gradient(to right, #16222a, #3a6073);
-            background-size: cover;
-        }
-        </style>
+        </div>
+        
+    </main>
+    <!--/Main layout-->
 
-          <h2 style="color: white;text-align: center;font-family: 'Lobster', cursive;">Posted Projects</h2>
-        </div>
-      <br>
-      {% if projects %}
-      {% for project in projects %}
-      <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" style="color:white">
-          <img class='streamimg' src="{{project.image.url}}" height="300px" width="95%"  alt="{{ project.title }}"></img>
-          <br>
-            <h5 class="card-title firstletter">{{project.title}}</h5>
-            <p class="card-text firstletter">{{ project.description | truncatechars:450 }}</p>
-            <p class="card-text"><a href="{% url 'project' project.id %}"><button type="button" class="btn btn-primary">View</button></a></p>
-            <br>
-        </div>
-        <br>
-      {% endfor %}
-      {% else %}
-      <h3> Add Projects<a href="{% url 'newproject' %}">here</a>.</h3>
-      {% endif %}
-      </div>
-<br>
-      <div class="app-download-links">
-            <!-- <p style="font-family: 'Shadows Into Light', cursive;color: black;font-size: 4opx">Get the app.</p> -->
-            <a href="https://www.apple.com/ke/ios/app-store/">
-                <img src="https://res.cloudinary.com/jorpdesigns/image/upload/v1533403096/download-appstore.png" alt="Download on App Store"
-                />
-            </a>
-            <a href="https://play.google.com/store?utm_source=emea_Med&utm_medium=hasem&utm_content=Feb2017&utm_campaign=Evergreen&pcampaignid=MKT-DR-emea-ke-1001280-Med-hasem-py-Evergreen-Feb2017-Text_Search_BKWS%7cONSEM_kwid_43700008633139486&gclid=Cj0KCQiA6dLgBRDoARIsAJgoM4v0Z8s7IrUKM5fEeZmJ_PObJ0YAkeQbk0_3K_FdNaGjv-rfvkBtXPcaAjeYEALw_wcB&gclsrc=aw.ds">
-                <img src="https://res.cloudinary.com/jorpdesigns/image/upload/v1533403096/download-googleplay.png" alt="Download on Google Play"
-                />
-            </a>
-            <a href="https://www.microsoft.com/en-us/store/top-free/apps/pc">
-                <img src="https://res.cloudinary.com/jorpdesigns/image/upload/v1533403096/download-microsoft.png" alt="Get from Microsoft"
-                />
-            </a>
-        </div>
-        <style>
-            .app-download-links {
-                text-align: center;
-            }
-            .app-download-links p{
-                margin-bottom: 280px;
-            }
-            .app-download-links a img {
-                height: 45px;
-                margin: 0 7px 20px;
-             }
-            /* p{
-                margin-bottom: 280px;
-            } */ 
-        </style>
+    <!--Footer-->
+    <footer class="page-footer text-center text-md-left pt-4">
 
+        <!--Footer Links-->
+        <div class="container-fluid">
+            <div class="row">
+
+                <!--First column-->
+                <div class="col-md-3">
+                    <h5 class="text-uppercase font-weight-bold mb-4">More Info</h5>
+                    <p>Here are More info and links.</p>
+                </div>
+                <!--/.First column-->
+
+                <hr class="w-100 clearfix d-md-none">
+
+                <!--Second column-->
+                <div class="col-md-2 mx-auto">
+                    <h5 class="text-uppercase font-weight-bold mb-4">Add Projects</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="{% url 'newproject' %}" style="color:green">Add Project</a></li>
+                        
+                    </ul>
+                </div>
+                <!--/.Second column-->
+
+                <hr class="w-100 clearfix d-md-none">
+
+                <!--Third column-->
+                <div class="col-md-2 mx-auto">
+                    <h5 class="text-uppercase font-weight-bold mb-4">Projects</h5>
+                    <ul class="list-unstyled">
+                        <li><a  href="{% url 'myprojects' %}" style="color:green">My Projects</a></li>
+                        
+                    </ul>
+                </div>
+                <!--/.Third column-->
+
+                <hr class="w-100 clearfix d-md-none">
+
+                <!--Fourth column-->
+                <div class="col-md-2 mx-auto">
+                    <h5 class="text-uppercase font-weight-bold mb-4" style="color:white">Profile</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="{% url 'profile' profile.id %}" style="color:green">My Profile</a></li>
+                        
+                    </ul>
+                </div>
+                <!--/.Fourth column-->
+
+            </div>
+        </div>
+        <!--/.Footer Links-->
+
+        <hr>
+
+        <!--Call to action-->
+        <div class="call-to-action text-center my-4">
+            <ul class="list-unstyled list-inline">
+                <li class="list-inline-item">
+                    <h5 style="color:white">Register for free</h5>
+                </li>
+                <li class="list-inline-item"><a href="/accounts/register/" class="btn btn-primary">Sign up!</a></li>
+            </ul>
+        </div>
+        <!--/.Call to action-->
+
+        <hr>
+
+        <!--Social buttons-->
+        <div class="social-section text-center">
+            <ul class="list-unstyled list-inline" style="color:white">
+                <li class="list-inline-item"><a class="btn-floating btn-fb"><i class="fab fa-facebook-f"> </i></a></li>
+                <li class="list-inline-item"><a class="btn-floating btn-tw"><i class="fab fa-twitter"> </i></a></li>
+                <li class="list-inline-item"><a class="btn-floating btn-gplus"><i class="fab fa-google-plus-g"> </i></a></li>
+                <li class="list-inline-item"><a class="btn-floating btn-li"><i class="fab fa-linkedin-in"> </i></a></li>
+                <li class="list-inline-item"><a class="btn-floating btn-git"><i class="fab fa-github"> </i></a></li>
+            </ul>
+        </div>
+        <!--/.Social buttons-->
+
+        <!--Copyright-->
+        <div class="footer-copyright py-3 text-center">
+            <div class="container-fluid">
+                © 2018 Copyright: <a href="http://www.MDBootstrap.com" style="color:white"> MDBootstrap.com </a>
+
+            </div>
+        </div>
+        <!--/.Copyright-->
+
+    </footer>
+    <!--/.Footer-->
+
+    <!-- SCRIPTS -->
+    <!-- JQuery -->
+    <script type="text/javascript" src="../../js/jquery-3.3.1.min.js"></script>
+
+    <!-- Tooltips -->
+    <script type="text/javascript" src="../../js/popper.min.js"></script>
+
+    <!-- Bootstrap core JavaScript -->
+    <script type="text/javascript" src="../../js/bootstrap.min.js"></script>
+
+    <!-- MDB core JavaScript -->
+    <script type="text/javascript" src="../../js/mdb.min.js"></script>
+    <script>
+
+         // SideNav Initialization
+        $(".button-collapse").sideNav();
+        
+        new WOW().init();
+    
+    </script>
+<style>
+li{
+    color: white;
+    list-style-type: none;
+}
+
+.card-body card-body-cascade text-center wow fadeIn{
+     background-color: skyblue;
+}
+.fab {
+  padding: 20px;
+  font-size: 30px;
+  width: 30px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50%;
+}
+
+</style>
+</body>
+
+</html>
 
 
       {% endblock %}
