--- a/reward/templates/index.html
+++ b/reward/templates/index.html
@@ -136,12 +136,12 @@
 
         <!--Social buttons-->
         <div class="social-section text-center">
-            <ul class="list-unstyled list-inline" style="color:white">
-                <li class="list-inline-item"><a class="btn-floating btn-fb"><i class="fab fa-facebook-f"> </i></a></li>
-                <li class="list-inline-item"><a class="btn-floating btn-tw"><i class="fab fa-twitter"> </i></a></li>
-                <li class="list-inline-item"><a class="btn-floating btn-gplus"><i class="fab fa-google-plus-g"> </i></a></li>
-                <li class="list-inline-item"><a class="btn-floating btn-li"><i class="fab fa-linkedin-in"> </i></a></li>
-                <li class="list-inline-item"><a class="btn-floating btn-git"><i class="fab fa-github"> </i></a></li>
+            <ul class="list-unstyled list-inline">
+                <li class="list-inline-item"><a href="https://facebook.com/Francis Sakwa" class="btn-floating btn-fb" style="color:white"><i class="fab fa-facebook-f"> </i></a></li>
+                <li class="list-inline-item"><a href="https://twitter.com/Francis Sakwa" class="btn-floating btn-tw" style="color:white"><i class="fab fa-twitter"> </i></a></li>
+                <li class="list-inline-item"><a href="https://google.com/Francis Sakwa" class="btn-floating btn-gplus" style="color:white"><i class="fab fa-google-plus-g"> </i></a></li>
+                <li class="list-inline-item"><a href="https://linkedin.com/Francis Sakwa" class="btn-floating btn-li" style="color:white"><i class="fab fa-linkedin-in"> </i></a></li>
+                <li class="list-inline-item"><a href="https://github.com/FrancisSakwa89" class="btn-floating btn-git" style="color:white"><i class="fab fa-github"> </i></a></li>
             </ul>
         </div>
         <!--/.Social buttons-->
@@ -149,7 +149,7 @@
         <!--Copyright-->
         <div class="footer-copyright py-3 text-center">
             <div class="container-fluid">
-                © 2018 Copyright: <a href="http://www.MDBootstrap.com" style="color:white"> MDBootstrap.com </a>
+                © 2018 Copyright: <a href="http://github.com/FrancisSakwa89" style="color:white"> Francis Sakwa </a>
 
             </div>
         </div>
