added shortcut links to my app

--- a/reward/templates/index.html
+++ b/reward/templates/index.html
@@ -47,7 +47,7 @@
                 <!--Card content-->
                 <div class="card-body card-body-cascade text-center wow fadeIn" data-wow-delay="0.2s" style="background-color:skyblue">
                     <!--Title-->
-                    <h4 class="card-title"><strong>Shortcuts</strong></h4>
+                    <h4 class="card-title" style="color:black"><strong>Shortcuts</strong></h4>
                     
 
                         <a href="{% url 'contact' %}" class="btn btn-primary btn-lg">Contacts</a>
@@ -139,8 +139,8 @@
             <ul class="list-unstyled list-inline">
                 <li class="list-inline-item"><a href="https://facebook.com/Francis Sakwa" class="btn-floating btn-fb" style="color:white"><i class="fab fa-facebook-f"> </i></a></li>
                 <li class="list-inline-item"><a href="https://twitter.com/Francis Sakwa" class="btn-floating btn-tw" style="color:white"><i class="fab fa-twitter"> </i></a></li>
-                <li class="list-inline-item"><a href="https://google.com/Francis Sakwa" class="btn-floating btn-gplus" style="color:white"><i class="fab fa-google-plus-g"> </i></a></li>
-                <li class="list-inline-item"><a href="https://linkedin.com/Francis Sakwa" class="btn-floating btn-li" style="color:white"><i class="fab fa-linkedin-in"> </i></a></li>
+                <li class="list-inline-item"><a href="https://google.com" class="btn-floating btn-gplus" style="color:white"><i class="fab fa-google-plus-g"> </i></a></li>
+                <li class="list-inline-item"><a href="https://ke.linkedin.com/" class="btn-floating btn-li" style="color:white"><i class="fab fa-linkedin-in"> </i></a></li>
                 <li class="list-inline-item"><a href="https://github.com/FrancisSakwa89" class="btn-floating btn-git" style="color:white"><i class="fab fa-github"> </i></a></li>
             </ul>
         </div>
