added login required decorator to search_results

--- a/reward/templates/index.html
+++ b/reward/templates/index.html
@@ -15,10 +15,10 @@
     <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display" rel="stylesheet">
 
     <!-- Bootstrap core CSS -->
-    <link href="../../css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="../../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Material Design Bootstrap -->
-    <link href="../../css/mdb.min.css" rel="stylesheet">
+    <!-- <link href="../../css/mdb.min.css" rel="stylesheet">  -->
 
 </head>
 
@@ -178,25 +178,8 @@
         new WOW().init();
     
     </script>
-<style>
-li{
-    color: white;
-    list-style-type: none;
-}
 
-.card-body card-body-cascade text-center wow fadeIn{
-     background-color: skyblue;
-}
-.fab {
-  padding: 20px;
-  font-size: 30px;
-  width: 30px;
-  text-align: center;
-  text-decoration: none;
-  border-radius: 50%;
-}
 
-</style>
 </body>
 
 </html>
