--- a/reward/static/css/styles.css
+++ b/reward/static/css/styles.css
@@ -1,3 +1,20 @@
 /* h3{ 
     color: green
 } */
+
+li{
+    color: white;
+    list-style-type: none;
+}
+
+.card-body card-body-cascade text-center wow fadeIn{
+     background-color: skyblue;
+}
+.fab {
+  padding: 20px;
+  font-size: 30px;
+  width: 30px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50%;
+}
