--- a/reward/templates/navbar.html
+++ b/reward/templates/navbar.html
@@ -22,8 +22,11 @@
               <li><a class="nav-link" href="{% url 'contact' %}">Contacts</a></li>
               <li><a class="nav-link" href="{% url 'subscribe' %}">Subscribe</a></li>
               <li><a class="nav-link" href="{% url 'myprojects' %}">My Projects</a></li>
+              <li><a class="nav-link" href="{% url 'password' %}">Forgot Password</a></li>
+
                 </li>
               </ul>
+
               <!-- <br> -->
               <!-- <li>
                   <a class="nav-link" href="{% url 'contact'%}">Contacts</a>
@@ -52,6 +55,7 @@
             <a class='btn btn-default' href="/accounts/login">Login</a>
           </li>
       </ul>
+
           {% endif %}
           </ul>
           <form class="form-inline my-2 my-lg-0" action="{% url 'search_results' %}">
