--- a/reward/templates/search.html
+++ b/reward/templates/search.html
@@ -4,11 +4,11 @@
 
 <div class="container">
         <div class="intro">
-                <h2>Searching...</h2>
+                <h2>Searching ...</h2>
             </div>
             <hr>
         
-{% if searched_project %}
+{% if searched_projects %}
     <h5>Found {{ searched_projects|length }} project(s) for the searched term '{{message}}'</h5>
 {% else %}
     <h5> Found 0 project(s) for the search term '{{message}}'</h5>
@@ -16,9 +16,9 @@
 
 <br>
 
-{% if searched_project %}
+{% if searched_projects %}
 <ul class="list-group list-group-flush">
-        {% for project in searched_project %}
+        {% for project in searched_projects %}
         <li class="list-group-item" style="background-color: transparent;">
             <p class="firstletter">{{project.title}}
             <a href="{% url 'project' project.id %}" style="float:right;">
@@ -30,9 +30,4 @@
         {% endfor %}
 </ul>
 {% endif %}
-
-
-
-</div>
-
-{% endblock %}
+{% endblock%}
