--- a/reward/templates/photos/profile.html
+++ b/reward/templates/photos/profile.html
@@ -18,12 +18,12 @@
     <p></p>
     <span><a class='maillink' href="mailto:{{profile.contact}}" style="color: whitesmoke">{{profile.contact}}</a></span>
     <p></p>
-    <a href="{% url 'newprofile' %}"><button type="button" class="btn btn-info">Update Profile</button></a>   
+    <a href="{% url 'newprofile' %}"><button type="button" class="btn btn-md" style="background-color:#33705c;">Update Profile</button></a>   
     <br>
     <br>
  {% else %}
  <p></p>
-    <a href="{% url 'newprofile' %}"><button type="button" class="btn btn-info">Update Profile</button></a>   
+    <a href="{% url 'newprofile' %}"><button type="button" class="btn btn-md" style="background-color:#33705c;">Update Profile</button></a>   
     <br>
     <br>
   {% endif %}
