created another db

--- a/reward/templates/navbar.html
+++ b/reward/templates/navbar.html
@@ -71,6 +71,7 @@
             <a href="{% url 'contact' %}">Contact Us</a>
             <a href="{% url 'searchme' %}">Search Projects</a>
             <a href="{% url 'subscribe' %}">Subscribe</a>
+            <a href="http://127.0.0.1:8000/admin/">Admin</a>
 
 
 
